# layout-prompter

./: CHANGELOG.md  Makefile  pyproject.toml
.github/workflows/: ci.yaml
layout_prompter/: datasets.py  layout_prompter.py  parsers.py  preprocessors.py  selector.py  serializer.py  testing.py  transforms.py  typehint.py  utils.py  visualizers.py
layout_prompter/configs/: __init__.py  base.py  poster_layout.py  publaynet.py  rico.py  webui.py
layout_prompter/modules/: llm.py  rankers.py  selectors.py  serializers.py
layout_prompter/parsers/: __init__.py  base.py  gpt_response_parser.py  tgi_response_parser.py
layout_prompter/processors/: __init__.py  base.py  completion.py  content.py  gen_r.py  gen_t.py  gen_ts.py  refinement.py  text.py  utils.py
layout_prompter/transforms/: __init__.py  add_canvas_element.py  add_gaussian_noise.py  add_relation.py  clip_text_encoder_transform.py  discretize_bounding_box.py  label_dict_sort.py  lexicographic_sort.py  saliency_map_to_bboxes.py  shuffle_elements.py
layout_prompter/visualizers/: __init__.py  base.py  content.py  utils.py
src/layout_prompter/: parsers.py  parsing.py  preprocess.py  selection.py  serialization.py  testing.py  transforms.py  typehint.py  utils.py
src/layout_prompter/configs/: __init__.py  dataset.py
test_fixtures/content_aware/: test_idx=0.json.bk  test_idx=1.json  test_idx=2.json  test_idx=3.json
tests/: conftest.py  content_aware_test.py  preprocessors_test.py
tests/modules/: selectors_test.py
tests/tasks/: constraint_explicit_test.py  content_aware_test.py  text_to_layout_test.py
(+63 files in other folders)
