[project]
name = "layout-prompter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip",
    "openai>=1.0.0",
    "opencv-python>=4.0.0.21",
    "pandas>=1.0.0",
    "scipy>=1.0.0",
    "seaborn>=0.10.0",
    "torch>=1.0.0",
    "torchvision>=0.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "openai-responses>=0.11.2",
    "pytest-xdist>=3.5.0",
    "pytest>=6.0.0",
    "ruff>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP" }

[tool.mypy]
python_version = "3.10"
exclude = ["tests"]
ignore_missing_imports = true
# check_untyped_defs = true
# disallow_untyped_defs = true
# no_implicit_optional = true
# warn_return_any = true
# warn_unused_ignores = true
